--- a/public/home/css/style.css
+++ b/public/home/css/style.css
@@ -1,45 +1,63 @@
 .chat-container {
-    max-width: 400px;
-    margin: 40px auto;
-    padding: 20px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .message {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .profile-image {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 10px;
-  }
-  
-  .message-content {
-    background-color: #fff;
-    padding: 10px;
-    border-radius: 10px;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .username {
-    font-weight: bold;
-    color: #337ab7;
-    margin-bottom: 5px;
-  }
-  
-  .message-text {
-    color: #333;
-    padding: 5px;
-   
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.message {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.profile-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 10px;
+}
+
+.message-content {
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.username {
+  font-weight: bold;
+  color: #337ab7;
+  margin-bottom: 5px;
+}
+
+.message-text {
+  color: #333;
+  padding: 5px;
+}
+
+.message-form {
+  display: flex;
+  align-items: center;
+}
+
+input.message-input,
+button.message-submit {
+  width: 70%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+button.message-submit {
+  width: 30%;
+}
