--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,6 +4,7 @@ main.main-auth-content {
   place-items: center;
   width: 100%;
   height: 100%;
+  background-color: #f5f5f5;
 }
 
 .form{
@@ -11,6 +12,6 @@ main.main-auth-content {
   max-width: 400px;
   padding: 20px;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
