--- a/public/home/assets/css/style.css
+++ b/public/home/assets/css/style.css
@@ -27,7 +27,7 @@
 
 .align-message {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   background-color: #fff;
   width: 100%;
 }
@@ -78,4 +78,14 @@ button.message-submit {
 .delete-content {
   padding: .5rem;
   cursor: pointer;
+}
+
+.newText{
+  display: grid;
+}
+
+.newText input{
+  padding: .5rem;
+  border-radius: 4px;
+  border: solid 1px;
 }
